@startuml

skinparam packageStyle rectangle
skinparam classAttributeIconSize 0
skinparam backgroundColor #FFFFFF
skinparam shadowing false
skinparam arrowColor #444444
skinparam classBorderColor #444444
skinparam classBackgroundColor #F8F8F8
skinparam classFontColor #222222
skinparam stereotypeCBackgroundColor #A9DCDF
skinparam linetype ortho
skinparam roundCorner 15
skinparam defaultTextAlignment center
skinparam class {
    BackgroundColor White
    BorderColor #444444
    FontColor #222222
}

package "7_OOFPP" {

    package "habit" #D6E9FE {
        class Habit {
            - name: str
            - start_date: datetime
            - log: list[datetime]
            - periodicity: str
            __init__(name: str, start_date: datetime, log: list[datetime], periodicity: str)
            calculate_streak(): int
            log_entry(date: datetime): void
        }
    }

    package "db" #FFD699 {
        class Database {
            - db_file: str
            - habits: list[Habit]
            __init__(db_file: str)
            load_db(): list[Habit]
            save_db(): void
            get_all_habits(): list[Habit]
            get_habit(name: str): Habit
            add_habit(habit: Habit): void
            delete_habit(name: str): void
            get_habits_by_periodicity(periodicity: str): list[Habit]
            get_longest_streak_all_habits(): tuple[int, str]
            get_longest_streak_for_habit(name: str): int
        }
    }

    package "test" #C3E6CB {
        class TestHabit {
            test_calculate_streak_daily(): void
            test_calculate_streak_weekly(): void
            test_log_entry_daily(): void
            test_log_entry_weekly(): void
        }

        class TestDatabase {
            test_add_habit(): void
            test_delete_habit(): void
            test_get_habits_by_periodicity(): void
            test_get_longest_streak_all_habits(): void
            test_get_longest_streak_for_habit(): void
            test_load_db(): void
            test_save_db(): void
        }

        class TestAnalyze {
            test_analyze_habits(): void
            test_analyze_specific_habit(): void
            test_list_habits_by_periodicity(): void
            test_longest_streak_for_habit(): void
        }
    }

    package "analyze" #FAD7D7 {
        class analyze_habits {
            analyze_habits(): void
            analyze_specific_habit(db: Database): void
            list_habits_by_periodicity(db: Database): void
            longest_streak_for_habit(db: Database): void
        }
    }

    package "main" #E6E6E6 {
        class main_script {}
    }

    ' Improve layout by defining structured top-to-bottom order with clear relationships
    main_script -[hidden]-> Habit
    main_script -[hidden]-> Database
    main_script -[hidden]-> analyze_habits
    Database -[hidden]-> Habit
    TestHabit -[hidden]-> Habit
    TestDatabase -[hidden]-> Database
    TestAnalyze -[hidden]-> analyze_habits

    ' Using corrected relationship notation
    main_script --> Habit : uses
    main_script --> Database : uses
    main_script --> analyze_habits : uses

    TestHabit ..|> Habit : tests
    TestDatabase ..|> Database : tests
    TestDatabase ..|> Habit : tests
    TestAnalyze ..|> analyze_habits : tests

    Database "1" *-- "*" Habit : manages
}

@enduml
